--- a/addExpense.html
+++ b/addExpense.html
@@ -5,7 +5,7 @@
 		</div>
 		<div class="col-xs-12 col-md-7">
 			<div class="form-group">
-				<div class="input-group date" id="datepicker2">
+				<div class="input-group " id="datepicker2">
 					<input type="text" class="form-control" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="dt" is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Schließen" current-text="Heute" clear-text="Leeren" alt-input-formats="altInputFormats" />
           			<span class="input-group-btn">
             			<button type="button" class="btn btn-default" ng-click="open1()">
@@ -22,9 +22,11 @@
 			<label for="payer">Wer hat gezahlt?</label>
 		</div>
 		<div class="col-xs-12 col-md-7">
-			<label ng-repeat="payer in payerOptions" class="radio-inline">
-				<input type="radio" name="optradio" ng-click="payerSelected(payer)">{{payer}}</input>
-			</label>			
+			<div class="input-group ">
+				<label ng-repeat="payer in payerOptions" class="radio-inline">
+					<input type="radio" name="optradio" ng-click="payerSelected(payer)">{{payer}}</input>
+				</label>
+			</div>
 		</div>
 	</div>
 
@@ -33,7 +35,9 @@
 			<label for="amount">Wo wurde eingekauft?</label>
 		</div>
 		<div class="col-xs-12 col-md-7">
-			<input type="text" ng-model="selectedShop" uib-typeahead="shop for shop in shops | filter:$viewValue | limitTo:8" class="form-control"></input>
+			
+				<input type="text" ng-model="selectedShop" uib-typeahead="shop for shop in shops | filter:$viewValue | limitTo:8" class="form-control"></input>
+			
 		</div>
 	</div>
 
@@ -42,7 +46,9 @@
 			<label for="amount">Ausgaben</label> (Euro)
 		</div>
 		<div class="col-xs-12 col-md-7">
-			<input type="number" class="form-control" min="0" max="10000" step="0.01" id="amount" ng-model="amount"></input>
+			
+				<input type="number" class="form-control" min="0" max="10000" step="0.01" id="amount" ng-model="amount"></input>
+			
 		</div>
 	</div>
 
