--- a/addExpense.html
+++ b/addExpense.html
@@ -57,4 +57,14 @@
 			<button type="submit" class="btn btn-success btn-block btn-lg">Hinzufügen</button>
 		</div>
 	</div>
+	<div class="row" ng-if="typeof(operationMessage.success) != 'undefined'" id="operationFeedback">
+		<div class="col-xs-12">
+			<div ng-if="operationMessage.success == true" class="alert alert-success">
+				{{operationMessage.message}}
+			</div>
+			<div ng-if="operationMessage.success === false" class="alert alert-danger">
+				{{operationMessage.message}}
+			</div>
+		</div>
+	</div>
 </form>
