--- a/haushaltsbuch.html
+++ b/haushaltsbuch.html
@@ -42,19 +42,19 @@
           </div>
         </nav>
         <div class="container">
-        {{loggedIn}}
           <div class="row" ng-if="loggedIn == false">
             <button type="button" class="btn btn-success btn-block btn-lg" ng-click="logIn()">Grant Access to Google Drive</button>
           </div>
 
           <div class="row" ng-if="loggedIn == true">
             <div class="col-xs-12 col-sm-4">
-              <div ng-if="showAddExpense()" ng-include="'addExpense.html'"></div>
-              <div ng-if="showDetailList()" ng-include="'detailTable.html'"></div>
-              <div ng-if="showSummary()" ng-include="'summary.html'"></div>
+              <div ng-include="getAddExpenseInclude()"></div>
+              <div ng-include="getDetailListInclude()"></div>
+              <div ng-include="getSummaryInclude()"></div>
             </div>
             <div class="hidden-xs col-sm-8">
-              <div ng-include src="'detailTable.html'"></div>
+<!--              <div ng-include src="'detailTable.html'"></div>
+-->
             </div>
           </div>
         </div>
