--- a/addExpense.html
+++ b/addExpense.html
@@ -36,7 +36,7 @@
 		</div>
 		<div class="col-xs-12 col-md-7">
 			
-				<input type="text" ng-model="selectedShop" uib-typeahead="shop for shop in shops | filter:$viewValue | limitTo:8" class="form-control"></input>
+				<input type="text" ng-model="selectedShop" uib-typeahead="shop for shop in getShops() | filter:$viewValue | limitTo:8" class="form-control"></input>
 			
 		</div>
 	</div>
