Log out button will log out from Google

--- a/haushaltsbuch.html
+++ b/haushaltsbuch.html
@@ -37,7 +37,7 @@
               <li><a href="#" data-toggle="collapse" data-target="#myNavbar" ng-click="handleSummary($event)">Auswertung</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li style="display: none;" id="logoutMenu"><a href="#" ng-click="logOut()"><span class="glyphicon glyphicon-log-out"></span> Logout {{currentUser}}</a></li>
+              <li style="display: none;" id="logoutMenu"><a href="https://accounts.google.com/logout"><span class="glyphicon glyphicon-log-out"></span> Logout {{currentUser}}</a></li>
             </ul>
           </div>
         </nav>
