--- a/haushaltsbuch.html
+++ b/haushaltsbuch.html
@@ -47,12 +47,12 @@
           </div>
 
           <div class="row" ng-show="googleDataInitialized">
-            <div class="col-xs-12 col-sm-5" ng-show="googleDataInitialized">
+            <div class="col-xs-12" ng-show="googleDataInitialized">
               <div ng-include="getAddExpenseInclude()"></div>
               <div ng-include="getDetailListInclude()"></div>
               <div ng-include="getSummaryInclude()"></div>
             </div>
-            <div class="hidden-xs col-sm-7">
+            <div class="hidden-xs">
 <!--              <div ng-include src="'detailTable.html'"></div>
 -->
             </div>
