display summary more nicely

--- a/summary.html
+++ b/summary.html
@@ -7,12 +7,12 @@
 				Flash an Nanaka
 			</div>
 			<div class="col-xs-3">
-				<span class="pull-right">{{getSumFlashAnNanaka()}}&nbsp;€</span>
+				<span class="pull-right">{{getSumFlashAnNanaka() | currency:"€ ":2}}</span>
 			</div>
 			<div class="col-xs-4">
 				<div class="progress">
 					<div class="progress-bar" role="progressbar" aria-valuenow="{{getFlashPerc()}}" aria-valuemin="0" aria-valuemax="100" style="width:{{getFlashPerc()}}%">
-						<span class="sr-only">{{getFlashPerc()}}%</span>
+						<span>{{getSumFlash() | currency:"€ ":2}}</span>
 					</div>
 				</div>
 			</div>
@@ -22,12 +22,12 @@
 				Nanaka an Flash
 			</div>
 			<div class="col-xs-3">
-				<span class="pull-right">{{getSumNanakaAnFlash()}}&nbsp;€</span>
+				<span class="pull-right">{{getSumNanakaAnFlash() | currency:"€ ":2}}</span>
 			</div>
 			<div class="col-xs-4">
 				<div class="progress">
 					<div class="progress-bar" role="progressbar" aria-valuenow="{{getNanakaPerc()}}" aria-valuemin="0" aria-valuemax="100" style="width:{{getNanakaPerc()}}%">
-						<span class="sr-only">{{getNanakaPerc()}}%</span>
+						<span>{{getSumNanaka() | currency:"€ ":2}}</span>
 					</div>
 				</div>
 			</div>
