no linebreak for euro symbol

--- a/detailTable.html
+++ b/detailTable.html
@@ -16,7 +16,7 @@
 					<td>{{expense.payer}}</td>
 					<td>{{expense.date}}</td>
 					<td>{{expense.shop}}</td>
-					<td style="text-align: right">{{expense.amount | currency:"€ ":2}}</td>
+					<td style="text-align: right">{{expense.amount | currency:"€&nbsp;":2}}</td>
 				</tr>
 			</tbody>
 		</table>
