--- a/haushaltsbuch.html
+++ b/haushaltsbuch.html
@@ -8,7 +8,8 @@
     <title>Haushaltsbuch</title>
 
     <!-- Bootstrap -->
-    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="haushaltsbuch.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -17,8 +18,9 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script data-main="js/main" src="node_modules/requirejs/require.js"></script>
+    <link rel="shortcut icon" href="favicon.png" />
   </head>
-  <body>
+  <body class="haushaltsbuch">
     <div ng-controller="NavigationController">
       <div ng-controller="UserSessionController">
         <nav class="navbar navbar-inverse" >
