--- a/sabbatical.html
+++ b/sabbatical.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Haushaltsbuch</title>
+    <title>Sabbatical</title>
 
     <!-- Bootstrap -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
@@ -20,9 +20,9 @@
     <![endif]-->
 
     <script data-main="js/main" src="node_modules/requirejs/require.js"></script>
-    <link rel="shortcut icon" href="favicon.png" />
+    <link rel="shortcut icon" href="sabbatical.svg" />
   </head>
-  <body class="haushaltsbuch" data-spreadsheedid="1hD2tnAnriHpDRhhVwOTfB-zuTfCOsOFCrdZF2DmizsY">
+  <body class="haushaltsbuch" data-spreadsheedid="1iXaVa_jX0y8aFrDUbKPQgi-v33KfnFxAaDB062qAjnQ">
     <script>
         $(document.body).load("navigationController.html");
     </script>
